Instance on points crash when link instance geo to src #91767

Closed
opened 2021-09-28 03:27:37 +02:00 by yonghao lv · 6 comments

System Information
Operating system: Windows-10-10.0.22463-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-27 18:29, hash: c53ffda8a4
Worked: (newest version of Blender that worked as expected)

Short description of error
Instance on points crash when link instance geo to src

Exact steps for others to reproduce the error

  • Add an Instance on Points node between the Group Input and Group Out nodes.
  • Connect the Group Input "Geometry" socket in the "Instance" socket of the Instance node.

Crash

**System Information** Operating system: Windows-10-10.0.22463-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-27 18:29, hash: `c53ffda8a4` Worked: (newest version of Blender that worked as expected) **Short description of error** Instance on points crash when link instance geo to src **Exact steps for others to reproduce the error** * Add an Instance on Points node between the Group Input and Group Out nodes. * Connect the Group Input "Geometry" socket in the "Instance" socket of the Instance node. Crash
Author

Added subscriber: @1029910278

Added subscriber: @1029910278

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Can confirm, this hits assert BLI_assert(deg::deg_validate_copy_on_write_datablock(&data->temp_dupli_object.id));

>	blender.exe!`anonymous namespace'::deg_iterator_duplis_step(DEGObjectIterData * data) Line 191	C++

 	blender.exe!DEG_iterator_objects_next(BLI_Iterator * iter) Line 305	C++
 	blender.exe!DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * region, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1572	C
 	blender.exe!DRW_draw_view(const bContext * C) Line 1489	C
 	blender.exe!view3d_draw_view(const bContext * C, ARegion * region) Line 1566	C
 	blender.exe!view3d_main_region_draw(const bContext * C, ARegion * region) Line 1589	C
 	blender.exe!ED_region_do_draw(bContext * C, ARegion * region) Line 569	C
 	blender.exe!wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 729	C
 	blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 880	C
 	blender.exe!wm_draw_update(bContext * C) Line 1079	C
 	blender.exe!WM_main(bContext * C) Line 654	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 562	C
Can confirm, this hits assert `BLI_assert(deg::deg_validate_copy_on_write_datablock(&data->temp_dupli_object.id));` ``` > blender.exe!`anonymous namespace'::deg_iterator_duplis_step(DEGObjectIterData * data) Line 191 C++ blender.exe!DEG_iterator_objects_next(BLI_Iterator * iter) Line 305 C++ blender.exe!DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * region, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1572 C blender.exe!DRW_draw_view(const bContext * C) Line 1489 C blender.exe!view3d_draw_view(const bContext * C, ARegion * region) Line 1566 C blender.exe!view3d_main_region_draw(const bContext * C, ARegion * region) Line 1589 C blender.exe!ED_region_do_draw(bContext * C, ARegion * region) Line 569 C blender.exe!wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 729 C blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 880 C blender.exe!wm_draw_update(bContext * C) Line 1079 C blender.exe!WM_main(bContext * C) Line 654 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 562 C ```

This issue was referenced by 24a965bb16

This issue was referenced by 24a965bb16c22e33752dfb6c22105b96a8649aeb
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2021-09-29 10:56:11 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91767
No description provided.